Bug fix to add correct scale to the tab clip path

The clip path for tab is not being scaled based on the device scale
leading to incorrectly clipped tabs at HiDPI.

Bug: 812472
Change-Id: I4f016dec409dbd61eb569efc21eeab98dc3cfd74
Component: Tab, Clipping
Reviewed-on: https://chromium-review.googlesource.com/922454
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Malay Keshav <malaykeshav@chromium.org>
Cr-Commit-Position: refs/heads/master@{#537122}
Former-commit-id: 21620f905fe7cf72d23c16e170e3f9c8018ed0a1